--- a/sft.1
+++ b/sft.1
@@ -1,6 +1,7 @@
 .\" $Id$
 .\" %ISC_START_LICENSE%
 .\" ---------------------------------------------------------------------
+.\" Copyright 2016, Google, Inc.
 .\" Copyright 2013-2018, Pittsburgh Supercomputing Center
 .\" All rights reserved.
 .\"
