--- a/sft.1
+++ b/sft.1
@@ -1,9 +1,8 @@
 .\" $Id$
 .\" %ISC_START_LICENSE%
 .\" ---------------------------------------------------------------------
-.\" Copyright 2016, Google, Inc.
+.\" Copyright 2016-2018, Google, LLC
 .\" Copyright 2013-2018, Pittsburgh Supercomputing Center
-.\" All rights reserved.
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the
